.k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  namespace: uiptel
  labels:
    app: front
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - name: front
        image: anryzhov/uiptel-front@sha256:8543134ad1f1582a51ae476f23bd7d328fb9324eaf853fb361bb51212d8afba5
        imagePullPolicy: Always
        ports:
          - containerPort: 80
