.k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front
  namespace: uiptel
spec:
  type: ClusterIP
  selector:
    app: front
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
