.k8s/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: front
  namespace: uiptel
  annotations:
spec:
  tls:
  - hosts:
      - uiptel.com
    secretName: uiptel-tls-cert
  rules:
  - host: uiptel.com
    http:
      paths:
      - backend:
          serviceName: front
          servicePort: 80
