.k8s/wfs-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: wfs-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: omed.wordsforscrabble.com
    http:
      paths:
      - backend:
          serviceName: wfs-frontend
          servicePort: 80
